--- a/images/style.css
+++ b/images/style.css
@@ -64,6 +64,21 @@ body {
 /*	height:160px;*/
 }
 
+.panel ul{
+        margin: 0;
+}
+.panel li{
+        color: #666666;
+        font: 0.7em Tahoma, sans-serif;
+        margin: 0;
+        padding: 0px 0 0px 5px
+}
+.panel table{
+	color: #666666;
+        font: 0.7em Tahoma, sans-serif;
+
+}
+
 /*TEXT STYLES*/
 .bodytext {
 	font: 0.7em Tahoma, sans-serif;
