add usage.php     edit news.php, using news from sourceforge
	new file:   .gitignore
	modified:   feature.php
	modified:   footer.php
	modified:   header.php
	modified:   images/style.css
	modified:   index.php
	modified:   news.php
	new file:   usage.php
	modified:   adv.php

--- a/images/style.css
+++ b/images/style.css
@@ -79,6 +79,11 @@ body {
 
 }
 
+.panel pre{
+	color: #666666;
+	font: 0.7em Tahoma, sans-serif;
+}
+
 /*TEXT STYLES*/
 .bodytext {
 	font: 0.7em Tahoma, sans-serif;
