--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,4 @@
-3import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
 body {
   padding:30px;
